--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-    background-color: black;
-    color: green;
-    font-family: Lucida Sans, 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', sans-serif;
+    background-color: #f8f9fa;
+    color: rgb(0, 0, 0);
+    font-family: sans-serif;
     font-size: 20px;
 }
 
