--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #f8f9fa;
-    color: rgb(0, 0, 0);
+    color: black;
     font-family: sans-serif;
     font-size: 20px;
 }
